versioned_docs/version-5.3/client-api/operations/maintenance/indexes/content/_put-indexes-nodejs.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* There are a few ways to create and deploy indexes in a database.  

* This page describes deploying a __static-index__ using the `PutIndexesOperation` Operation.  
  For a general description of Operations see [what are operations](../../../../../client-api/operations/what-are-operations.mdx).  

* In this page:
    * [Ways to deploy indexes - short summary](../../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#ways-to-deploy-indexes---short-summary)
    * [Put indexes operation with IndexDefinition](../../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinition)
    * [Syntax](../../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#syntax)

</Admonition>
## Ways to deploy indexes - short summary 
<Admonition type="note" title="">

__Static index__:

There are a few ways to deploy a static-index from the Client API:  

  * Call `execute()` on a specific index instance
  * Call `IndexCreation.createIndexes()` to deploy multiple indexes
  * Execute `PutIndexesOperation` maintenance operation on the Document Store - see below
  * Learn more in [static indexes](../../../../../indexes/creating-and-deploying.mdx#static-indexes)

</Admonition>
<Admonition type="note" title="">

__Auto index__:  

  * An auto-index is created by the server when making a filtering query that doesn't specify which index to use
  * Learn more in [auto indexes](../../../../../indexes/creating-and-deploying.mdx#auto-indexes)

</Admonition>  


## Put indexes operation with IndexDefinition 
<Admonition type="note" title="">

Using `PutIndexesOperation` with __IndexDefinition__ allows the following:  

  * Choosing any name for the index
  * Setting low-level properties available in _IndexDefinition_
</Admonition>

<Tabs groupId='languageSyntax'>
<TabItem value="LINQ-index" label="LINQ-index">
<CodeBlock language="js">
{`// Create an index definition
const indexDefinition = new IndexDefinition();

// Name is mandatory, can use any string
indexDefinition.name = "OrdersByTotal";

// Define the index map functions, string format
// A single string for a map-index, multiple strings for a multi-map-index
indexDefinition.maps = new Set([\`
    // Define the collection that will be indexed:
    from order in docs.Orders

        // Define the index-entry:
        select new 
        {
            // Define the index-fields within each index-entry:
            Employee = order.Employee,
            Company = order.Company,
            Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
        }\`
]);

 // indexDefinition.reduce = ...

// Can provide other index definitions available on the IndexDefinition class
// Override the default values, e.g.:
indexDefinition.deploymentMode = "Rolling";
indexDefinition.priority = "High";
indexDefinition.configuration = {
    "Indexing.IndexMissingFieldsAsNull": "true"
};
// See all available properties in syntax below

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
const putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="JavaScript-index" label="JavaScript-index">
<CodeBlock language="js">
{`// Create an index definition
const indexDefinition = new IndexDefinition();

// Name is mandatory, can use any string
indexDefinition.name = "OrdersByTotal";

// Define the index map functions, string format
// A single string for a map-index, multiple strings for a multi-map-index
indexDefinition.maps = new Set([\`
    map('Orders', function(order) {
        return {
            Employee: order.Employee,
            Company: order.Company,
            Total: order.Lines.reduce(function(sum, l) {
                return sum + (l.Quantity * l.PricePerUnit) * (1 - l.Discount);
            }, 0)
        };
    });\`
]);

// indexDefinition.reduce = ...

// Can provide other index definitions available on the IndexDefinition class
// Override the default values, e.g.:
indexDefinition.deploymentMode = "Rolling";
indexDefinition.priority = "High";
indexDefinition.configuration = {
    "Indexing.IndexMissingFieldsAsNull": "true"
};
// See all available properties in syntax below

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
const putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax 

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const putIndexesOperation = new PutIndexesOperation(indexesToAdd);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - |- | - |
| **indexesToAdd** | `...IndexDefinition[]` | Definitions of indexes to deploy |

<a id="indexDefinition"/>

| `IndexDefinition` | | |
| - | - | - |
| name | string | Name of the index, a unique identifier |
| maps | Set&lt;string&gt; | All the map functions for the index |
| reduce | string | The index reduce function |
| deploymentMode | object | Deployment mode<br/>(Parallel, Rolling) |
| state | object | State of index<br/>(Normal, Disabled, Idle, Error) |
| priority | object | Priority of index<br/>(Low, Normal, High) |
| lockMode | object | Lock mode of index<br/>(Unlock, LockedIgnore, LockedError) |
| fields | Record&lt;string, object&gt; | _IndexFieldOptions_ per index field |
| additionalSources | Record&lt;string, string&gt; | Additional code files to be compiled with this index |
| additionalAssemblies | object[] | Additional assemblies that are referenced |
| configuration | object | Can override [indexing configuration](../../../../../server/configuration/indexing-configuration.mdx) by setting this Record&lt;string, string&gt; |
| outputReduceToCollection | string | A collection name for saving the reduce results as documents |
| reduceOutputIndex | number | This number will be part of the reduce results documents IDs |
| patternForOutputReduceToCollectionReferences | string | Pattern for documents IDs which reference IDs of reduce results documents |
| patternReferencesCollectionName | string | A collection name for the reference documents created based on provided pattern |

| Return value of `store.maintenance.send(putIndexesOp)` | |
| - | - |
| `object[]` | operation result per index |

| Operation result per index | | |
| - | - | - |
| index | string | Name of the index that was added |
| raftCommandIndex | long | Index of raft command that was executed |




